@@ -8,7 +8,8 @@
 
 ==========5.22==========
 2025-
-*1. 自带uixml的控件，在删除时也会删除TinUIXml
+1. 自带uixml的控件，在删除时也会删除TinUIXml
+2. 修复theme错误
 
 ==========5.21==========
 2025-3-7
